--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -24,9 +24,9 @@
 
     <include layout="@layout/content_web" />
 
-    <RelativeLayout
+    <com.google.android.gms.ads.AdView
         android:id="@+id/adViewContainer2"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         />
